<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_title"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Host" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Port" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Connect" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_white">

        <View
            android:id="@+id/view_parentcenter"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_centerInParent="true"
            android:background="@color/divider_deep" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/view_parentcenter"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_send_bottommenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sendarea_encode"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:gravity="center"
                    android:text="@string/encode"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_sendarea_clean"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/clean"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_sendarea_paste"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/paste"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_sendarea_copy"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/copy"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_sendarea_send"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.2"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/send"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/ll_send_bottommenu">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sendarea"
                    android:textColor="@color/txt_arearemind"
                    android:textSize="@dimen/txt_area_remind"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_sendarea_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/trans"
                    android:gravity="top"
                    android:hint="请输入发送的内容..."
                    android:inputType="textMultiLine"
                    android:maxLength="@integer/tcp_maxlength"
                    android:padding="2.5dip"
                    android:scrollbarSize="2.5dip"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbarThumbVertical="@drawable/bar_vertical_thumb"
                    android:scrollbarTrackVertical="@drawable/bar_vertical_track"
                    android:scrollbars="vertical"
                    android:textColorHint="@color/txt_gray"
                    android:textCursorDrawable="@drawable/course_black"
                    android:textSize="@dimen/txt_listitem_name" />

                <TextView
                    android:id="@+id/tv_sendlength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="2.5dip"
                    android:background="@drawable/rect_lengthremind_gray"
                    android:paddingBottom="2.0dip"
                    android:paddingLeft="7.5dip"
                    android:paddingRight="7.5dip"
                    android:paddingTop="2.0dip"
                    android:text="0/10000"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/txt_copyright" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/view_parentcenter"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_receive_bottommenu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_receive_encode"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/encode"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_receive_clean"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/clean"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_receive_switch"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/switchmsg"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_receive_copy"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/copy"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />

                <TextView
                    android:id="@+id/tv_receive_save"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/height_socketbtn"
                    android:layout_margin="2.5dip"
                    android:layout_weight="1.2"
                    android:background="@drawable/sl_sbtn_tcpmenu"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@drawable/sl_txt_tcpmenu"
                    android:textSize="@dimen/txt_socketbtn_name" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/ll_receive_bottommenu">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/receivearea"
                    android:textColor="@color/txt_arearemind"
                    android:textSize="@dimen/txt_area_remind"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_receivearea_receive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/trans"
                    android:gravity="top"
                    android:hint="请等待想要的数据..."
                    android:maxLength="@integer/tcp_maxlength"
                    android:overScrollMode="never"
                    android:padding="2.5dip"
                    android:scrollbarSize="2.5dip"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbarThumbVertical="@drawable/bar_vertical_thumb"
                    android:scrollbarTrackVertical="@drawable/bar_vertical_track"
                    android:scrollbars="vertical"
                    android:textColor="@color/txt_black"
                    android:textColorHint="@color/txt_gray"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/txt_listitem_name" />

                <TextView
                    android:id="@+id/tv_receivearea_receivelength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="2.5dip"
                    android:background="@drawable/rect_lengthremind_gray"
                    android:maxLength="@integer/tcp_maxlength"
                    android:paddingBottom="2.0dip"
                    android:paddingLeft="7.5dip"
                    android:paddingRight="7.5dip"
                    android:paddingTop="2.0dip"
                    android:text="0/10000"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/txt_copyright" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>